# 5ireChain

./: .gitignore  Cargo.toml  README.md  customSpec.json  customSpec01.json  customSpec1.json  customSpecRaw.json  hh.json  rust-toolchain.toml  staging-raw.json
.scannerwork/: report-task.txt
client/api/: Cargo.toml
client/api/src/: backend.rs
client/cli/: Cargo.toml
client/cli/src/frontier_db_cmd/: mapping_db.rs  meta_db.rs  mod.rs  tests.rs  utils.rs
client/consensus/: Cargo.toml
client/consensus/src/: lib.rs
client/db/: Cargo.toml
client/db/src/: lib.rs  parity_db_adapter.rs  upgrade.rs  utils.rs
client/db/src/kv/: mod.rs  parity_db_adapter.rs  upgrade.rs  utils.rs
client/db/src/sql/: mod.rs
client/mapping-sync/: Cargo.toml
client/mapping-sync/src/: lib.rs  worker.rs
client/mapping-sync/src/kv/: mod.rs  worker.rs
client/mapping-sync/src/sql/: mod.rs
client/rpc/: Cargo.toml
client/rpc-core/: Cargo.toml
client/rpc-core/src/types/: block.rs  block_number.rs  bytes.rs  filter.rs  index.rs  mod.rs  pubsub.rs  receipt.rs  transaction.rs  transaction_request.rs  txpool.rs  work.rs
client/rpc/src/: eth_pubsub.rs  lib.rs  net.rs  signer.rs  txpool.rs  web3.rs
client/rpc/src/eth/: block.rs  client.rs  execute.rs  fee.rs  filter.rs  format.rs  mod.rs  pending.rs  state.rs  submit.rs  transaction.rs
client/rpc/src/eth/cache/: lru_cache.rs  mod.rs
client/rpc/src/overrides/: mod.rs  schema_v1_override.rs  schema_v2_override.rs  schema_v3_override.rs
frame/base-fee/: Cargo.toml
frame/base-fee/src/: lib.rs  tests.rs
frame/contracts/: Cargo.toml  build.rs
frame/contracts/fixtures/: Cargo.toml  add_remove_delegate_dependency.wat  balance.wat  crypto_hashes.wat  debug_message_logging_disabled.wat  reentrance_count_call.wat  reentrance_count_delegated_call.wat  self_destruct.wat
frame/contracts/fixtures/contracts/common/: Cargo.toml
frame/contracts/mock-network/: Cargo.toml
frame/contracts/primitives/: Cargo.toml
frame/contracts/proc-macro/: Cargo.toml
frame/contracts/proc-macro/src/: lib.rs
frame/contracts/src/: exec.rs  lib.rs  migration.rs  storage.rs  tests.rs
frame/contracts/src/migration/: v11.rs
frame/contracts/src/storage/: meter.rs
frame/contracts/src/wasm/: mod.rs  prepare.rs  runtime.rs
frame/contracts/uapi/: Cargo.toml
frame/dynamic-fee/: Cargo.toml
frame/dynamic-fee/src/: lib.rs  tests.rs
frame/esg/: Cargo.toml
frame/esg/src/: benchmarking.rs  data.json  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
frame/evm/: Cargo.toml
frame/evm-chain-id/: Cargo.toml
frame/evm/precompile/blake2/: Cargo.toml
frame/evm/precompile/blake2/src/: lib.rs
frame/evm/precompile/bls12377/src/: lib.rs
frame/evm/precompile/bn128/: Cargo.toml
frame/evm/precompile/bn128/src/: lib.rs
frame/evm/precompile/curve25519/: Cargo.toml
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/ed25519/: Cargo.toml
frame/evm/precompile/modexp/: Cargo.toml
frame/evm/precompile/sha3fips/: Cargo.toml
frame/evm/precompile/simple/: Cargo.toml
frame/evm/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
frame/evm/src/runner/: mod.rs  stack.rs
frame/evm/test-vector-support/: Cargo.toml
frame/evm/test-vector-support/src/: lib.rs
frame/grandpa/: Cargo.toml
frame/grandpa/src/: equivocation.rs  lib.rs  mock.rs  tests.rs
frame/hotfix-sufficients/: Cargo.toml
frame/hotfix-sufficients/src/: lib.rs  mock.rs  tests.rs
frame/im-online/: Cargo.toml
frame/im-online/src/: lib.rs  migration.rs  mock.rs  tests.rs
frame/reward/: Cargo.toml
frame/reward/src/: benchmarking.rs  lib.rs  migration.rs  migrations.rs  mock.rs  tests.rs  weights.rs
frame/session/: Cargo.toml
frame/session/benchmarking/: Cargo.toml
frame/session/src/: lib.rs  mock.rs  validation.rs
frame/session/src/migrations/: mod.rs  v2.rs
frame/staking/: Cargo.toml
frame/staking/reward-curve/: Cargo.toml
frame/staking/reward-fn/: Cargo.toml
frame/staking/runtime-api/: Cargo.toml
frame/staking/src/: benchmarking.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  slashing.rs  tests.rs  weights.rs
frame/staking/src/pallet/: impls.rs  mod.rs
frame/sudo/: Cargo.toml
frame/sudo/src/: benchmarking.rs  extension.rs  lib.rs  migration.rs  mock.rs  tests.rs  weights.rs
frame/transaction-payment/: Cargo.toml
frame/transaction-payment/asset-tx-payment/: Cargo.toml
frame/transaction-payment/rpc/: Cargo.toml
frame/transaction-payment/rpc/runtime-api/: Cargo.toml
frame/transaction-payment/src/: lib.rs  mock.rs  payment.rs  tests.rs
node/: Cargo.toml
node/bench/: Cargo.toml
node/bench/src/: import.rs
node/cli/: Cargo.toml
node/cli/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  lib.rs  service.rs
node/inspect/: Cargo.toml
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs
node/rpc/: Cargo.toml
node/rpc/src/: eth.rs  lib.rs
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  command_helper.rs  eth.rs  lib.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: fake_chain_spec.rs  mainnet_chain_spec.rs  mod.rs  qa_chain_spec.rs  thunder_chain_spec.rs  uat_chain_spec.rs
node/src/chain_specs/: mod.rs  qa_chain_spec.rs
node/src/rpc/: eth.rs  mod.rs
node/testing/: Cargo.toml
node/testing/src/: bench.rs  client.rs  genesis.rs  keyring.rs
primitives/consensus/: Cargo.toml
primitives/consensus/src/: lib.rs
runtime/: Cargo.toml
runtime/core-primitives/: Cargo.toml
runtime/core-primitives/src/: lib.rs
runtime/firechain-mainnet-runtime/: Cargo.toml
runtime/firechain-mainnet-runtime/src/: constants.rs  impls.rs  lib.rs  precompiles.rs
runtime/firechain-qa-runtime/: Cargo.toml
runtime/firechain-qa-runtime/src/: impls.rs  lib.rs  precompiles.rs
runtime/firechain-thunder-runtime/: Cargo.toml
runtime/firechain-thunder-runtime/src/: constants.rs  impls.rs  lib.rs  precompiles.rs
runtime/firechain-uat-runtime/: Cargo.toml
runtime/firechain-uat-runtime/src/: lib.rs
runtime/src/: constants.rs  impls.rs  lib.rs  precompiles.rs
(+172 files in other folders)
